Make kqueue(2) work for virtual terminals.

PR:		40486
Submitted by:	Jilles Tjoelker <jilles+fbsd-bugs@stack.nl>

Former-commit-id: a2aebfa59e2770d21adda1305d2d062a0fdac5b3